kubernetes/bbb-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bbb
  labels:
    name: bbb
