kubernetes/bbb-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bbb
  namespace: bbb
spec:
  serviceName: "bbb"
  replicas: 1
  selector:
    matchLabels:
      app: bbb
  template:
    metadata:
      labels:
        app: bbb
    spec:
      hostNetwork: true
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "mongodb"
        - "redis"
        - "bbb-web"
        - "bbb-freeswitch"
        - "bbb-webrtc-sfu"
        - "bbb-nginx"
        - "bbb-fsesl-akka"
        - "fsesl-akka"
        - "bbb-jodconverter"
        - "bbb-periodic"
        - "host.docker.internal"
        - "html5"
        - "etherpad"
        - "webrtc-sfu"
        - "jodconverter"
        - "bbb-apps-akka"
        - "apps-akka"
      containers:
        - name: bbb-html5-backend
          image: destinyakpo/bbb-docker-html5:v2.7.3
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /html5-static
              name: bbb-volume

        - name: bbb-html5-frontend
          image: destinyakpo/bbb-docker-html5:v2.7.3
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /html5-static
              name: bbb-volume

        - name: bbb-web
          image: destinyakpo/bbb-docker-web:v2.7.3
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - wget
                - --no-verbose
                - --tries=1
                - --spider
                - http://127.0.0.1:8090/bigbluebutton/api
            initialDelaySeconds: 120
          resources: {}
          volumeMounts:
            - mountPath: /var/bigbluebutton
              name: bbb-volume
            - mountPath: /var/freeswitch/meetings
              name: bbb-volume
            - mountPath: /var/kurento
              name: bbb-volume
        - name: bbb-freeswitch
          image: destinyakpo/bbb-docker-freeswitch:v1.10.10-v2.7.3
          imagePullPolicy: Always
          resources: {}
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
                - NET_ADMIN
                - NET_RAW
                - NET_BROADCAST
                - SYS_NICE
                - SYS_RESOURCE
          volumeMounts:
            - mountPath: /etc/freeswitch/sip_profiles/external
              name: bbb-volume
            - mountPath: /etc/freeswitch/dialplan/public_docker
              name: bbb-volume
            - mountPath: /var/freeswitch/meetings
              name: bbb-volume

        - name: bbb-nginx
          image: destinyakpo/bbb-docker-nginx:1.23-v5.0.2-v2.7.3
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/bigbluebutton
              name: bbb-volume
            - mountPath: /html5-static
              name: bbb-volume
              readOnly: true
            - mountPath: /www/
              name: bbb-volume
            - mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              name: nginx-config
          ports:
            - containerPort: 8080

        - name: etherpad
          image: destinyakpo/bbb-docker-etherpad:1.9.1-s8328b77-p068ded5
          imagePullPolicy: Always
        - name: redis
          image: redis:7.2-alpine
          imagePullPolicy: Always

        - name: kurento
          image: kurento/kurento-media-server:6.18
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/kurento
              name: bbb-volume

        - name: bbb-webrtc-sfu
          image: destinyakpo/bbb-docker-webrtc-sfu:v2.12.0
          imagePullPolicy: Always
          volumeMounts:
            - name: webrtc-sfu-log
              mountPath: /var/log/bbb-webrtc-sfu

        - name: bbb-fsesl-akka
          image: destinyakpo/bbb-docker-fsesl-akka:v2.7.3
          imagePullPolicy: Always
        - name: bbb-apps-akka
          image: destinyakpo/bbb-docker-apps-akka:v2.7.3
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/freeswitch/meetings
              name: bbb-volume

        - name: bbb-jodconverter
          image: destinyakpo/bbb-docker-jodconverter:latest
          imagePullPolicy: Always

        - name: bbb-periodic
          image: destinyakpo/bbb-docker-periodic:v2.7.0
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/bigbluebutton
              name: bbb-volume

        - name: mongodb
          image: mongo:4.4
          ports:
            - containerPort: 27017
          imagePullPolicy: IfNotPresent
          args:
            - mongod
            - --config
            - /etc/mongod.conf
            - --oplogSize
            - "8"
            - --replSet
            - rs0
            - --noauth
          livenessProbe:
            exec:
              command:
                - bash -c "if mongo --eval 'quit(db.runCommand({ ping':' 1 }).ok ? 0 ':' 2)'; then exit 0; fi; exit 1;"
          resources: {}
          volumeMounts:
            - mountPath: /data/configdb
              name: mongodb-tmpfs0
            - mountPath: /data/db
              name: mongodb-tmpfs1
            - name: mongo-config
              mountPath: /etc/mongod.conf
              subPath: mongod.conf
            - name: mongo-config
              mountPath: /docker-entrypoint-initdb.d/init-replica.sh
              subPath: init-replica.sh

      restartPolicy: Always
      volumes:
        - name: bbb-volume
          hostPath:
            path: /var/bbb-volume
            type: DirectoryOrCreate

        - emptyDir:
            medium: Memory
          name: mongodb-tmpfs0

        - emptyDir:
            medium: Memory
          name: mongodb-tmpfs1

        - emptyDir:
            medium: Memory
          name: recordings-tmpfs0

        - emptyDir:
            medium: Memory
          name: recordings-tmpfs1

        - emptyDir:
            medium: Memory
          name: resty-auto-ssl

        - name: ssl-volume
          hostPath:
            path: /var/resty-auto-ssl
            type: DirectoryOrCreate

        - name: mongo-config
          configMap:
            defaultMode: 0777
            name: mongo-config
            items:
            - key: mongod.conf
              path: mongod.conf
            - key: init-replica.sh
              path: init-replica.sh

        - name: nginx-config
          configMap:
            name: nginx-config

        - name: webrtc-sfu-log
          emptyDir: {}

  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
