kubernetes/bbb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bbb-service
  namespace: bbb
spec:
  selector:
    app: bbb
  ports:
    - protocol: TCP
      port: 80  # The port on the service
      targetPort: 8090  # The correct port on the container
      #nodePort: 30001  # The port exposed on the node
  type: ClusterIP
