kubernetes/kurento-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kurento
  namespace: bbb
spec:
  selector:
    app: bbb
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
