kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: bbb
spec:
  selector:
    app: bbb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
