kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: bbb
spec:
  selector:
    app: bbb
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
