kubernetes/bbb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bbb-ingress
  namespace: bbb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: srv02.bbb.t-assets.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bbb-service
            port:
              number: 80
